--- a/html/KakaoOven/ovenapp.html
+++ b/html/KakaoOven/ovenapp.html
@@ -38,12 +38,93 @@
                     <i class="fa-solid fa-magnifying-glass"></i>
                 </div>
                 <div class="btn-toggle">
-                    <button class="btn change-viewtype">
+                    <button class="change-viewtype">
                         <i class="fa-solid fa-list"></i>
                     </button>
-                    <button class="btn change-viewtype active">
+                    <button class="change-viewtype active">
                         <i class="fa-solid fa-table-cells-large"></i>
                     </button>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <ul class="nav-stacked">
+                <li class="nav-stacked-list active-list">나의 프로젝트</li>
+                <li class="nav-stacked-list">나에게 공유된 프로젝트</li>
+            </ul>
+            <div class="project-main">
+                <div class="project-action">
+                    <button class="btn btn-defaul">모두 선택</button>
+                    <button class="btn btn-primary"><i class="fa-solid fa-circle-plus"></i>  새로운 프로젝트 만들기</button>
+                </div>
+                <div class="project-list-wrapper">
+                    <div class="project-item">
+                        <div class="project-container">
+                            <div class="item-header">
+                                <input type="checkbox" class="item-check">
+                                <div class="item-option-btn">
+                                    <i class="fa-solid fa-gear"></i>
+                                    <i class="fa-solid fa-caret-down"></i>
+                                </div>
+                            </div>
+                            <div class="item-img-container">
+                                <img src="images/profile.png">
+                            </div>
+                            <div class="item-content">
+                                <a href="#" class="item-title">test</a>
+                                <pre class="item-description">test</pre>
+                                <div class="item-footer">
+                                    <div class="project-tiem"><i class="fa-regular fa-clock"></i> 2022년 12월 27일</div>
+                                    <button class="btn btn-test"> 로그인 없이 테스트 가능</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project-item">
+                        <div class="project-container">
+                            <div class="item-header">
+                                <input type="checkbox" class="item-check">
+                                <div class="item-option-btn">
+                                    <i class="fa-solid fa-gear"></i>
+                                    <i class="fa-solid fa-caret-down"></i>
+                                </div>
+                            </div>
+                            <div class="item-img-container">
+                                <img src="images/profile.png">
+                            </div>
+                            <div class="item-content">
+                                <a href="#" class="item-title">test</a>
+                                <pre class="item-description">test</pre>
+                                <div class="item-footer">
+                                    <div class="project-tiem"><i class="fa-regular fa-clock"></i> 2022년 12월 27일</div>
+                                    <button class="btn btn-test"> 로그인 없이 테스트 가능</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    
+                    <div class="project-item">
+                        <div class="project-container">
+                            <div class="item-header">
+                                <input type="checkbox" class="item-check">
+                                <div class="item-option-btn">
+                                    <i class="fa-solid fa-gear"></i>
+                                    <i class="fa-solid fa-caret-down"></i>
+                                </div>
+                            </div>
+                            <div class="item-img-container">
+                                <img src="images/profile.png">
+                            </div>
+                            <div class="item-content">
+                                <a href="#" class="item-title">test</a>
+                                <pre class="item-description">test</pre>
+                                <div class="item-footer">
+                                    <div class="project-tiem"><i class="fa-regular fa-clock"></i> 2022년 12월 27일</div>
+                                    <button class="btn btn-test"> 로그인 없이 테스트 가능</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
