--- a/html/project/mongmongHome.html
+++ b/html/project/mongmongHome.html
@@ -20,10 +20,10 @@
             margin: 0;
         }
         .nav-bar {
-            contain-intrinsic-inline-size: 100%;
+            
         }
         .nav-bar>ul {
-            width: 2500px;
+            width: 100%;
             height: 200px;
             margin: 0;
             margin-top: 30px;
@@ -33,7 +33,7 @@
         }
         .nav-bar a {
             display: block;
-            width: 190px;
+            width: 255px;
             height: 60px;
             text-align: center;
             line-height: 50px;
@@ -114,6 +114,25 @@
                 <li><a href="#">4~7세</a></li>
             </ul>
         </nav>
+        <template>
+            <div class="Wrapper">
+                <span v-on:click="pre" v-bind:class="{ hidden: selected == 1 }">
+                    <i class="fas fa-chevron-circle-left fa-2x left"></i>
+                </span>
+                <div class="imageContainer"v-bind:style="{
+                            transform: 'translate(-' + (selected - 1) * 300 + 'px, 0px)'
+                            }">
+                    <div v-for="i in images">
+                        <div class="image"v-bind:style="{ 'background-image': 'url(' + i + ')' }">
+
+                        </div>
+                    </div>
+                </div>
+                <span v-on:click="next" v-bind:class="{ hidden: selected == length }">
+                    <i class="fas fa-chevron-circle-right fa-2x right"></i>
+                </span>
+            </div>
+        </template>
     </div>
 </body>
 </html>
